--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -13,7 +13,7 @@
     <Grid RowDefinitions="26,*">
       <!-- Toolbar -->
       <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border2}">
-        <Grid ColumnDefinitions="Auto,*,Auto">
+        <Grid ColumnDefinitions="Auto,Auto,*,Auto">
           <StackPanel Grid.Column="0" Orientation="Horizontal" IsVisible="{Binding IsOrgFilePathVisible}" VerticalAlignment="Center">
             <Path Width="12" Height="12" Data="{StaticResource Icons.File}" Margin="8,0,0,0"/>
             <TextBlock Classes="monospace" Margin="4,0,0,0" Text="{Binding OrgFilePath, Converter={x:Static c:PathConverters.TruncateIfTooLong}}" FontSize="11"/>
@@ -26,7 +26,14 @@
             <Path Classes="rotating" Width="10" Height="10" Margin="8,0" Data="{DynamicResource Icons.Loading}" IsVisible="{Binding IsLoading}"/>
           </StackPanel>
 
-          <StackPanel Grid.Column="2" Margin="32,0,0,0" Orientation="Horizontal" VerticalAlignment="Center">
+          <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" IsVisible="{Binding FileModeDiff, Converter={x:Static c:ObjectConverters.IsNotNull}}">
+            <TextBlock Classes="monospace" Margin="8,0,0,0" Text="{DynamicResource Text.Diff.FileModeChanged}" FontSize="11"/>
+            <TextBlock Classes="monospace" Text="{Binding FileModeDiff.Old}" FontSize="11"/>
+            <TextBlock Margin="4,0" Text="→"/>
+            <TextBlock Classes="monospace" Text="{Binding FileModeDiff.New}" FontSize="11"/>
+          </StackPanel>
+
+          <StackPanel Grid.Column="3" Margin="32,0,0,0" Orientation="Horizontal" VerticalAlignment="Center">
             <ToggleButton Classes="line_path"
                           Width="32" Height="18"
                           Background="Transparent"
