--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -318,7 +318,7 @@
               <Path x:Name="iconSubmoduleUpdate" Width="12" Height="12" Data="{StaticResource Icons.Loading}"/>
             </Button>
             <Button Grid.Column="3" Classes="icon_button" Width="14" Margin="0,0,8,0" Command="{Binding AddSubmodule}" ToolTip.Tip="{DynamicResource Text.Repository.Submodules.Add}">
-              <Path Width="12" Height="12" Data="{StaticResource Icons.Submodule}"/>
+              <Path Width="12" Height="12" Data="{StaticResource Icons.Submodule.Add}"/>
             </Button>
           </Grid>
         </ToggleButton>
