refactor: using a new DotBrushProperty instead of calling Application.TryGetResource

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -131,6 +131,7 @@
       <v:CommitGraph x:Name="commitGraph"
                      BindingDataGrid="{Binding #commitDataGrid}"
                      Graph="{Binding Graph}"
+                     DotBrush="{DynamicResource Brush.Contents}"
                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                      IsHitTestVisible="False"
                      ClipToBounds="True"/>
