ux: re-design Views.Repository
* It's better to move the `Navigate to HEAD` button to the top-right of this page.
* Icons and alignments

--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -86,7 +86,7 @@
                 <Border Height="16" Margin="0,0,6,0" CornerRadius="2" ClipToBounds="True">
                   <StackPanel Orientation="Horizontal">
                     <Border Background="{DynamicResource Brush.Decorator}" Width="16">
-                      <Path Width="8" Height="8" Stretch="Fill" Data="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToIcon}}" Fill="{DynamicResource Brush.DecoratorIcon}"/>
+                      <Path Width="8" Height="8" Data="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToIcon}}" Fill="{DynamicResource Brush.DecoratorIcon}"/>
                     </Border>
                     <Border Background="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToBackground}}">
                       <TextBlock Classes="monospace" Text="{Binding Name}" FontSize="10" Margin="4,0" Foreground="Black"/>
