--- a/src/Views/Checkout.axaml
+++ b/src/Views/Checkout.axaml
@@ -15,5 +15,17 @@
       <Path Width="14" Height="14" Margin="8,0" Data="{StaticResource Icons.Branch}"/>
       <TextBlock Text="{Binding Branch}"/>
     </StackPanel>
+    <StackPanel Orientation="Vertical" IsVisible="{Binding HasLocalChanges}">
+      <TextBlock Text="{DynamicResource Text.Checkout.LocalChanges}"/>
+      <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.StashAndReply}"
+                   GroupName="LocalChanges"
+                   IsChecked="{Binding StashLocalChanges, Mode=TwoWay }"/>
+      <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.Discard}"
+                   GroupName="LocalChanges"
+                   IsChecked="{Binding DiscardLocalChanges, Mode=TwoWay}"/>
+      <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.Leave}"
+                   GroupName="LocalChanges"
+                   IsChecked="{Binding LeaveLocalChanges, Mode=TwoWay}"/>
+    </StackPanel>
   </StackPanel>
 </UserControl>
